--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://RitishKhanna.github.io/iPod-Classic-2.0",
+  "homepage": "http://RitishKhanna.github.io/iPod-Classic",
   "name": "ipod-classic",
   "version": "0.1.0",
   "private": true,
